0026401: Visualization - small boxes in front of big one disappear in perspective view